--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,37 @@ button {
 .custom-label-field {
     @apply block text-gray-700 font-medium mb-2
 }
+
+.admin-home-echarts {
+    min-width: 200px;
+    max-width: 400px;
+}
+
+
+.ql-editor.ql-blank {
+    min-height: 300px;
+    text-align: right !important;
+  }
+  .ql-toolbar.ql-snow {
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
+  }
+  .ql-toolbar.ql-snow + .ql-container.ql-snow {
+    border-bottom-left-radius: 0.75rem;
+    border-bottom-right-radius: 0.75rem;
+  }
+  .ql-snow .ql-picker:not(.ql-color-picker):not(.ql-icon-picker) svg {
+    right: auto !important;
+    left: 0px;
+  }
+  
+  .ql-editor {
+    direction: rtl;
+    text-align: right;
+  }
+  
+.ql-editor {
+    height: 300px;
+    direction: rtl;
+    text-align: right;
+}
