--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,19 @@
 
 
 @font-face {
-    font-family: 'cairo-regular';
-    src: url('../fonts/Rubik-Regular.ttf');
+    font-family: 'Rubik';
+    src: url('/fonts/Rubik-Regular.ttf') format('truetype');
 }
 
 body {
     min-height: 100vh;
     background-color: white;
+    font-family: 'Rubik', sans-serif;
 }
 
 * {
     box-sizing: border-box;
-    font-family: 'cairo-regular';
+    font-family: 'Rubik', sans-serif;
 }
 
 a {
