--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,27 @@ button {
     scrollbar-width: none;
 }
 
+@layer utilities {
+    /* Custom scrollbar styles */
+    .scrollbar::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 4px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb {
+      background: #888;
+      border-radius: 4px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
+  }
 
 @keyframes scanTypeAnime {
     0% {
